--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tinder_clone",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
